--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Nishant Patra</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Nishant Patra!</h1>
+				<p>I'm a data scientist by day and by night...I don't know really? <em> I guess I like sports?</em> All of them...  <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:nishant.patra1@gmail.com">email</a></li>
+        		<li><a href="https://github.com/lebro-23">github.com/lebro-23</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
