--- a/cv/cv.html
+++ b/cv/cv.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Nishant Patra</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="../css/main.css">
+		<link rel="stylesheet" type="text/css" href="../css/cv.css">
 	</head>
 	<body>
 		<nav>
@@ -17,13 +17,26 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>CV</h1>
-        			<h2>Data Scientist, Ensu (San Francisco)</h2>
-						<li>Responsible for designing, implementing and managing entire data science pipeline from Survey Design & Data Collection to ETL, Modeling & Deployment</li>
-						<li>Built deep learning ensemble consisting of autoencoder + classifier using Tensorflow, iteratively achieving more than 300% uplift in accuracy over initial rules based prediction system</li>
-						<li>Building and implementing ensemble recommender system consisting of collaborative filtering/matrix factorization + autoencoder combined with clustering</li>
-						<li>Working closely with Product to create metrics for retention, flow and funnel analysis and automating this through Mixpanel integration with BigQuery and R</li>
-        			<h2>Data Science Analyst - Rest (Sydney)</h2>
-						<li>Provided comprehensive churn analysis of customer base using visual data analysis, feature selection and a combination of machine learning (XGBoost, Random Forest) and statistical (Lasso, Logistic Regression) models. Identified leading ‘triggers’ that are highly indicative of churn and could potentially save more than $100 million</li>
+        			<h2>Education<h2>
+        				<h3>University of Sydney – BSc – Mathematics & Computer Science (Mar 2014 – Nov 2017<h3>
+        			<h2>Experience<h2>
+	        			<h3>Data Scientist, Ensu (San Francisco)</h3>
+							<li>Responsible for designing, implementing and managing entire data science pipeline from Survey Design & Data Collection to ETL, Modeling & Deployment</li>
+							<li>Built deep learning ensemble consisting of autoencoder + classifier using Tensorflow, iteratively achieving more than 300% uplift in accuracy over initial rules based prediction system</li>
+							<li>Building and implementing ensemble recommender system consisting of collaborative filtering/matrix factorization + autoencoder combined with clustering</li>
+							<li>Working closely with Product to create metrics for retention, flow and funnel analysis and automating this through Mixpanel integration with BigQuery and R</li>
+	        			<h3>Analyst (Data Science) - Rest (Sydney)</h3>
+							<li>Provided comprehensive churn analysis of customer base using visual data analysis, feature selection and a combination of machine learning (XGBoost, Random Forest) and statistical (Lasso, Logistic Regression) models. Identified leading ‘triggers’ that are highly indicative of churn and could potentially save more than $100 million</li>
+						<h3>Analyst, Client Analytics (Data Science) – Equifax (Sydney)</h3>
+							<li>Responsible for designing, implementing and managing entire data science pipeline from Survey Design & Data Collection to ETL, Modeling & Deployment</li>
+							<li>Built deep learning ensemble consisting of autoencoder + classifier using Tensorflow, iteratively achieving more than 300% uplift in accuracy over initial rules based prediction system</li>
+							<li>Building and implementing ensemble recommender system consisting of collaborative filtering/matrix factorization + autoencoder combined with clustering</li>
+							<li>Working closely with Product to create metrics for retention, flow and funnel analysis and automating this through Mixpanel integration with BigQuery and R</li>
+					<h2>Skills<h2>
+							<li>Responsible for designing, implementing and managing entire data science pipeline from Survey Design & Data Collection to ETL, Modeling & Deployment</li>
+							<li>Built deep learning ensemble consisting of autoencoder + classifier using Tensorflow, iteratively achieving more than 300% uplift in accuracy over initial rules based prediction system</li>
+							<li>Building and implementing ensemble recommender system consisting of collaborative filtering/matrix factorization + autoencoder combined with clustering</li>
+							<li>Working closely with Product to create metrics for retention, flow and funnel analysis and automating this through Mixpanel integration with BigQuery and R</li>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
