--- a/cv/cv.html
+++ b/cv/cv.html
@@ -29,7 +29,9 @@
 								<li>Decreasing load times by 400% by combining existing backend Django code into highly optimized SQL</li>
 								<li>Building social media scrapers + bots to collect data and carry out different actions, helping increase our Instagram followers by 800% and generating leads for 10,000 + potential TikTok influencers</li>
 								<li>Setting up backend framework to pull data from APIs and load into database using Celery and Django</li>
-		        			<h3>Analyst (Data Science) - Rest (Sydney)</h3>
+							</ul>
+		        		<h3>Analyst (Data Science) - Rest (Sydney)</h3>
+		        			<ul>
 								<li>Provided comprehensive churn analysis of customer base using visual data analysis, feature selection and a combination of machine learning (XGBoost, Random Forest) and statistical (Lasso, Logistic Regression) models. Identified leading ‘triggers’ that are highly indicative of churn and could potentially save more than $100 million</li>
 								<li>Used customer address information to geo-code addresses. Combined this with census data to add 100+ geo-demographic features for use in modeling.</li>
 							</ul>
@@ -43,7 +45,7 @@
 								<li>Used variety of time series models (ARIMA/ARIMAX, LSTM, prophet) to forecast future credit demand</li>
 							</ul>
 					<h2>Skills<h2>
-							<ul>
+							<ul class="SkillsList">
 								<li>Responsible for designing, implementing and managing entire data science pipeline from Survey Design & Data Collection to ETL, Modeling & Deployment</li>
 								<li>Built deep learning ensemble consisting of autoencoder + classifier using Tensorflow, iteratively achieving more than 300% uplift in accuracy over initial rules based prediction system</li>
 								<li>Building and implementing ensemble recommender system consisting of collaborative filtering/matrix factorization + autoencoder combined with clustering</li>
