--- a/cv/cv.html
+++ b/cv/cv.html
@@ -18,7 +18,7 @@
     		<div class="blurb">
         		<h1>CV</h1>
         			<h2>Education<h2>
-        				<h3>University of Sydney – BSc – Mathematics & Computer Science (Mar 2014 – Nov 2017<h3>
+        				<h3>University of Sydney – BSc – Mathematics & Computer Science (Mar 2014 – Nov 2017)<h3>
         			<h2>Experience<h2>
 	        			<h3>Data Scientist, Ensu (San Francisco)</h3>
 	        				<ul>
