--- a/cv/cv.html
+++ b/cv/cv.html
@@ -46,6 +46,7 @@
 							</ul>
 					<h2>Skills<h2>
 						<h3></h3>
+						<div id="test_react_button"></div>
 							<ul class="SkillsList">
 								<li>Responsible for designing, implementing and managing entire data science pipeline from Survey Design & Data Collection to ETL, Modeling & Deployment</li>
 								<li>Built deep learning ensemble consisting of autoencoder + classifier using Tensorflow, iteratively achieving more than 300% uplift in accuracy over initial rules based prediction system</li>
@@ -60,5 +61,13 @@
         		<li><a href="https://github.com/lebro-23">github.com/lebro-23</a></li>
 			</ul>
 		</footer>
+	 <!-- ... other HTML ... -->
+	<!-- Load React. -->
+	<!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+	<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+
+	<!-- Load our React component. -->
+	<script src="test_react.js"></script>
 	</body>
 </html>
